fixed alignment of image as the window size chnages

--- a/src/components/Navigationbar/AboutMe/AboutMe.module.css
+++ b/src/components/Navigationbar/AboutMe/AboutMe.module.css
@@ -47,8 +47,11 @@
 }
 
 .meIMG{
-    width: 45%;
+    width: 50%;
     z-index: 1;
+    position: relative;
+    right: -5%;
+    /*
     animation-name: bouncing;
     animation-duration: 3s;
     animation-iteration-count: infinite;
@@ -64,6 +67,7 @@
     100%{
         transform: translate(0, -0px);
     }
+        */
 }
 
 .topBlur{
@@ -98,5 +102,9 @@
     }
     .content{
         align-items: center;
+    }
+    .meIMG{
+        align-items: center;
+        right: 0;
     }
 }
